--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
         <script src="http://localhost:1337/socket.io/socket.io.js"></script>
         <script>
           var socket = io.connect('http://localhost:1337');
+
           socket.on('news', function (data) {
             console.log(data);
+          });
+
+          socket.on('connect', function() {
+             // Connected, let's sign-up to receive messages for this room
+             socket.emit('room', 'hallo');
           });
         </script>
     </body>
