--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
     <body>
         <script src="http://localhost:1337/socket.io/socket.io.js"></script>
         <script>
-          var socket = io.connect('http://localhost:1337');
+          var socket = io.connect( 'http://localhost:1337' );
 
-          socket.on('news', function (data) {
-            console.log(data);
+          socket.on( 'copabana', function ( data ) {
+            console.log( data );
           });
 
-          socket.on('connect', function() {
+          socket.on( 'connect', function () {
              // Connected, let's sign-up to receive messages for this room
-             socket.emit('room', 'hallo');
-          });
+             // use 'app' by default
+             socket.emit( 'room', 'app' );
+             console.log( 'connecting to app namespace' );
+          } );
         </script>
     </body>
 </html>
