Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   npm install redis
 </code></pre>
 
-<p>Copy and edit config file
-  <code>cp conf/configuration.js.dist conf/configuration.js</code></p>
+<p>Copy and edit config file<br><code>cp conf/configuration.js.dist conf/configuration.js</code></p>
 
-<p>Run Copacabana
-  <code>node copacabana.js</code></p>
+<p>Make sure Redis is running</p>
+
+<p>Then run Copacabana<br><code>node copacabana.js</code></p>
 
 <h2>
 <a name="general-usage" class="anchor" href="#general-usage"><span class="octicon octicon-link"></span></a>General usage</h2>
