Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@ prototype fast javascript applications.</p>
 <h2>
 <a name="example" class="anchor" href="#example"><span class="octicon octicon-link"></span></a>Example</h2>
 
-<p>See Backbone Todo MVC in example/todo/index.html, with two tabs open</p>
+<p>See <a href="http://guillaumepotier.github.io/copacabana/example/copacabana-todo-mvc/">here</a>
+a live demo of famous Todo MVC Backbone running with copacabana.</p>
+
+<p>Source code could be found in <code>example/</code></p>
 
 <h3>
 <a name="api" class="anchor" href="#api"><span class="octicon octicon-link"></span></a>API</h3>
@@ -99,6 +102,16 @@ sent in <code>namespace</code> socket room</p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-42282896-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
